# devbox

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
bootstrap/: cloud-init.yaml
bootstrap/local-review/personas/: architecture-reviewer.md  code-cleanliness-reviewer.md  code-quality-reviewer.md  security-reviewer.md  test-reviewer.md  ux-reviewer.md
bootstrap/local-review/plugin/.claude-plugin/: marketplace.json  plugin.json
bootstrap/local-review/plugin/commands/: local-review.md
bootstrap/scripts/: configure-sourcegraph-gitlab.py  devbox-aws-credentials.sh  devbox-tmux-attach.sh  init-ao-config.py  install-closedloop.sh  install-local-review.sh  list-sourcegraph-repos.sh  setup-ssh-keys.sh  setup-tmux.sh  sync-mcp-config.py
catalog-schema/: catalog.schema.json
cli/: devbox-catalog-mcp.sh  devbox-linear-mcp.sh  devbox-sourcegraph-mcp.sh  devbox.sh  pyproject.toml
cli/devbox_catalog/: __init__.py  build.py  catalog_io.py  cli.py  config.py  mcp_server.py  model.py
cli/devbox_catalog/extractors/: __init__.py  alembic_schema.py  claude_md.py  frontend.py  gitlab_ci.py  pyproject_deps.py  python_modules.py  terraform_stacks.py
cli/devbox_linear/: __init__.py  client.py  mcp_server.py
cli/devbox_sourcegraph/: __init__.py  client.py  mcp_server.py
terraform/: .terraform.lock.hcl  iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf  versions.tf
