[project]
name = "devbox-catalog"
version = "0.1.0"
description = "Generates a system-comprehension catalog for a polyglot monorepo"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
devbox = "devbox_catalog.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devbox_catalog*"]
