[project]
name = "devbox-catalog"
version = "0.1.0"
description = "Generates a system-comprehension catalog for a polyglot monorepo"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.scripts]
devbox = "devbox_catalog.cli:main"
devbox-catalog-mcp = "devbox_catalog.mcp_server:main"
devbox-sourcegraph-mcp = "devbox_sourcegraph.mcp_server:main"
devbox-linear-mcp = "devbox_linear.mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["devbox_catalog*", "devbox_sourcegraph*", "devbox_linear*"]
